// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements are parseable without bodies with both names: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "Any",
          "declaredShortName": "'1.1'",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable without bodies with name: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "Any_",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable without bodies with no names: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable without bodies with short name: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredShortName": "any",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable without bodies with unrestricted name: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "'arbitrary/ name+'",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements can be nested: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [
                  {
                    "$type": "OwningMembership",
                    "elements": [],
                    "target": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "C",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
                "declaredName": "B",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Class",
                "children": [],
                "declaredName": "D",
                "heritage": [],
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
          ],
          "declaredName": "A",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;
